tests/error/05.desc
Runtime error - index func: big index